# resonance-lattice-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.claude/skills/rlat/: SKILL.md
.claude/skills/rlat/references/: CLI_REFERENCE.md  FAQ.md  RECIPES.md
.claude/skills/rlat/scripts/: rebuild-and-prime.sh  search-then-inject.sh
docs/: BENCHMARKS.md  CLI.md  CORE_FEATURES.md  ENCODERS.md  ENCODER_CHOICE.md  FAQ.md  GETTING_STARTED.md  HONEST_CLAIMS.md  KNOWLEDGE_MODEL_ARCHITECTURE.md  LICENSE_FAQ.md  MCP.md  OBSIDIAN_PLUGIN.md  OVERVIEW.md  RQL_REFERENCE.md  SEMANTIC_MODEL.md  SKILL_INTEGRATION.md  STATUS_AND_BOUNDARIES.md  STORAGE_MODES.md
obsidian-plugin/: esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
obsidian-plugin/src/: client.ts  graph-view.ts  main.ts  process.ts  progress-modal.ts  resonance-graph.ts  search-modal.ts  settings.ts  sidebar-view.ts  types.ts
src/resonance_lattice/: __init__.py  algebra.py  ann_index.py  calculus.py  cascade.py  chunker.py  cli.py  compiler.py  confidence.py  config.py  consolidation.py  discover.py  encoder.py  encoder_onnx.py  encoder_openvino.py  health.py  interference.py  lattice.py  layered_memory.py  lens.py  lens_router.py  locate.py  materialiser.py  mcp_server.py  memory.py  memory_primer.py  pattern_injection.py  probe.py  projector.py  quantize.py  query_router.py  refresh.py  registry.py  reranker.py  reranker_openvino.py  retention.py  reversible_cascade.py  serialise.py  server.py  setup_config.py  (+13 more)
src/resonance_lattice/_experimental/: __init__.py  access.py  adaptive.py  attention.py  differentiable.py  evolution.py  kv_registry.py  morphogenesis.py  network.py  swarm.py
src/resonance_lattice/bundled/: __init__.py
src/resonance_lattice/composition/: __init__.py  composed.py  context_file.py  diagnostics.py  parser.py
src/resonance_lattice/field/: __init__.py  asymmetric_dense.py  dense.py  factored.py  multi_vector.py  pq.py
src/resonance_lattice/primer/: __init__.py  commit_topics.py  memory_amplify.py  refresh.py
src/resonance_lattice/reader/: __init__.py  api.py  base.py  citations.py  local.py
src/resonance_lattice/remote/: __init__.py  cache.py  github.py
src/resonance_lattice/retrieval/: __init__.py  bm25.py  expand.py  lexical.py  lexical_band.py  modes.py  probe.py
src/resonance_lattice/rql/: __init__.py  algebra_ops.py  cache.py  compare.py  compose.py  dsl.py  dynamics_ops.py  eml.py  eml_circuits.py  geometric.py  info.py  query_ops.py  result_manifold.py  signal_ops.py  spectral.py  stats.py  types.py
